# cs-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  api.py  config.py  database.py  logging_config.py  main.py  models.py  rebuild_events.py  scheduler.py  schemas.py
app/collectors/: __init__.py  base.py  liquipedia.py  monitored_page.py  reddit.py  registry.py  rss.py  steam_news.py  youtube.py
app/services/: __init__.py  ai.py  events.py  manual.py  notifier.py  pipeline.py  relevance.py  reporting.py  scoring.py  seeding.py  text.py  time.py
app/templates/: detail.html  index.html
deploy/: bootstrap-gce.sh
tests/: conftest.py  test_ai_and_scoring.py  test_app_startup.py  test_collectors.py  test_manual.py  test_monitored_page_steam.py  test_pipeline.py  test_reporting_and_notification.py  test_text.py  test_time_display.py
