[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs-monitor"
version = "0.1.0"
description = "CS2 饰品市场趋势情报 MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "feedparser>=6.0,<7",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-dateutil>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

